v1.49.8
- fix: change type for CallType: from string to CallType struct
- fix: remove omitempty from server video calls

v.1.49.7
- feat(features): new settings for captcha

v.1.49.6
- fix(features): fix type of field

v.1.49.5
- fix(features): fix broken versioning

v.1.49.4
- feat(features): add ReCaptchaWebKey param in features for captcha settings

v.1.49.3
- feat(features): add param in features for support NTLM authentication
- feat(features): add param in features for captcha settings
- feat(TS codegen): parse Go float into TS number

v.1.49.2
- feat(video_calls): add structures for support video calls with back compatibility

v.1.49.1
- chore(features): add omitempty tag for FileExtensions fields in Features struct

v.1.49.0
- feat(dlp): add DLPEvent structures for DLP integration

v.1.48.2
 - update comment ADUid field in ContactCustomFields struct for docs

v.1.48.1
 - added FileExtensionWhitelist, FileExtensionBlacklist and FileExtensionWhitelistPriority params in Features struct

v.1.48.0
 - tdapi.TeamConfirmation

v.1.47.1
 - fix: remove omitempty tag for IsPinCodeRequired and PinCodeWrongLimit fields

v.1.47.0
 - added IsPinCodeRequired and PinCodeWrongLimit fields in Features struct for pin-codes support

v.1.46.9
 - added ADUid CustomField

v.1.46.8
 - tdapi.Resp._time field position fix

v.1.46.7
 - added form for create payment

v.1.46.6
 - added Subscription struct

v.1.46.5
 - TaskItem.CanChange added

v.1.46.4
 - tdapi.Team.task_importance_rev

v.1.46.3
 - more docs added

v.1.46.2
 - tdapi.Team.display_family_name_first

v.1.46.1
 - remove unused tdapi.Gone

v.1.46.0
 - server.uisettings params changed from {"params": data} to {"params": {"namespace": namespace, "data": data}}

v.1.45.3
 - features.MaxTeamTitleLength

v.1.45.2
 - NewServerChatsUpdated shortcut

v.1.45.1
 - libs upgrade

v.1.45.0
 - experimental optional field icons if tdapi.AtLinks and tdapi.SharpLinks

v.1.44.0
 - remove deprecated server.panic event

v.1.43.1